@@ -1953,9 +1953,7 @@
               (top-right-m-t
                (if (numberp (cdr (car (car top-frame-transient-buttons-right))))
                    (+ (cdr (car (car top-frame-transient-buttons-right))) (+ styletab:title-dimension (button-width-custom))) 0)))
-          (set-tab-adjustments #:theme-left-dec-width top-left-d-w #:theme-right-dec-width top-right-d-w #:theme-left-margin top-left-m
-                               #:theme-right-margin top-right-m #:theme-left-margin-transient top-left-m-t
-                               #:theme-right-margin-transient top-right-m-t))
+          (set-tab-adjustments top-left-d-w top-right-d-w top-left-m top-right-m top-left-m-t top-right-m-t))
         (setq normal-frame
               (append top-frame-default-border-corner-group top-frame-title-group top-frame-normal-buttons-left 
                       top-frame-border-group top-frame-normal-buttons-right))
@@ -1984,9 +1982,7 @@
               (bottom-right-m-t
                (if (numberp (cdr (car (car bottom-frame-transient-buttons-right))))
                    (+ (cdr (car (car bottom-frame-transient-buttons-right))) (+ styletab:title-dimension (button-width-custom))) 0)))
-          (set-tab-adjustments #:theme-left-dec-width bottom-left-d-w #:theme-right-dec-width bottom-right-d-w #:theme-left-margin bottom-left-m
-                               #:theme-right-margin bottom-right-m #:theme-left-margin-transient bottom-left-m-t
-                               #:theme-right-margin-transient bottom-right-m-t))
+          (set-tab-adjustments bottom-left-d-w bottom-right-d-w bottom-left-m bottom-right-m bottom-left-m-t bottom-right-m-t))
         (setq normal-frame
               (append bottom-frame-default-border-corner-group bottom-frame-title-group bottom-frame-normal-buttons-left 
                       bottom-frame-border-group bottom-frame-normal-buttons-right bottom-frame-title-cursor-images))
@@ -2015,9 +2011,7 @@
               (left-right-m-t
                (if (numberp (cdr (car (car left-frame-transient-buttons-right))))
                    (+ (cdr (car (car left-frame-transient-buttons-right))) (+ styletab:title-dimension (button-width-custom))) 0)))
-          (set-tab-adjustments #:theme-left-dec-width left-left-d-w #:theme-right-dec-width left-right-d-w #:theme-left-margin left-left-m
-                               #:theme-right-margin left-right-m #:theme-left-margin-transient left-left-m-t
-                               #:theme-right-margin-transient left-right-m-t))
+          (set-tab-adjustments left-left-d-w left-right-d-w left-left-m left-right-m left-left-m-t left-right-m-t))
         (setq normal-frame
               (append left-frame-title-group left-frame-normal-buttons-left left-frame-default-border-corner-group 
                       left-frame-border-group left-frame-normal-buttons-right))
@@ -2046,9 +2040,7 @@
               (right-right-m-t
                (if (numberp (cdr (car (car right-frame-transient-buttons-right))))
                    (+ (cdr (car (car right-frame-transient-buttons-right))) (+ styletab:title-dimension (button-width-custom))) 0)))
-          (set-tab-adjustments #:theme-left-dec-width right-left-d-w #:theme-right-dec-width right-right-d-w #:theme-left-margin right-left-m
-                               #:theme-right-margin right-right-m #:theme-left-margin-transient right-left-m-t
-                               #:theme-right-margin-transient right-right-m-t))
+          (set-tab-adjustments right-left-d-w right-right-d-w right-left-m right-right-m right-left-m-t right-right-m-t))
         (setq normal-frame
               (append right-frame-title-group right-frame-normal-buttons-left right-frame-default-border-corner-group 
                       right-frame-border-group right-frame-normal-buttons-right))
