@@ -1,3 +1,8 @@
+2011-07-06  Christopher Roy Bratusek <nano@tuxfamily.org>
+	* lisp/sawfish/wm/tabs/tab.jl
+	* themes/Elberg-tabbed/theme.jl
+	* themes/StyleTab/theme.jl: simplified set-tab-adjustments
+
 2011-06-26  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* lisp/sawfish/wm/integration/gnome.jl
 	* lisp/sawfish/wm/integration/kde.jl
